<resources>
    <string name="app_name">SWOOSH</string>

    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="swoosh">SWOOSH</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league
    </string>
    <string name="get_started">Get Started</string>

    <string name="main_img">TODO</string>
    <string name="Designleague">TODO</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="go_ed">Go-ed</string>
    <string name="toggle1button">ToggleButton</string>
    <string name="womens">Womens</string>
    <string name="toggle2button">ToggleButton</string>
    <string name="button">Button</string>
    <string name="next">Next</string>
</resources>
