<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/second"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/Designleague" android:background="@drawable/swoosh_buttons_chacked"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:text="@string/swoosh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textShoosh" android:textSize="30sp"
            android:textColor="@android:color/holo_orange_dark" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold" android:lineSpacingExtra="18sp"
            android:fontFamily="@font/montserrat" android:textColorLink="@android:color/background_dark"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="30sp"
            android:fontFamily="@font/montserrat" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textShoosh" android:textColor="@android:color/holo_orange_dark"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="150dp" app:layout_constraintTop_toBottomOf="@+id/textView">
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton2" android:textOff="@string/mens"
                android:textOn="@string/mens" android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/background_light"/>
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton3" android:textOff="@string/womens"
                android:textOn="@string/womens" android:layout_marginTop="8dp"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/background_light"/>
        <ToggleButton
                android:text="@string/togglebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton4" android:textOff="@string/go_ed"
                android:textOn="@string/go_ed" android:layout_marginTop="8dp"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/background_light"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/Nextbutton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/imageView"
            android:background="@drawable/swoosh_button" android:fontFamily="@font/montserrat" android:textSize="18sp"
            android:textColor="@android:color/background_light"/>

</android.support.constraint.ConstraintLayout>